# pixelator

./: Dockerfile  LICENSE  LegoExample.ipynb  MANIFEST  README  README.md  example.py  prettify.sh  pyproject.toml  requirements.txt  run.sh  run_documentation.sh  run_prettify.sh  run_test.sh  setup.cfg  setup.py  update_documentation.sh  util_test_helper.sh
doc_template/: module.html.jinja2
docs/: index.html  pixelator.html  search.js
docs/0.1/: pixelator.html  search.js
docs/0.1/pixelator/: pixelator.html
docs/1.0.0/: search.js
docs/1.0.0/pixelator/: pixelator.html
docs/1.1.0/: pixelator.html  search.js
docs/1.1.0/pixelator/: pixelator.html
docs/1.2.0/: index.html  search.js
docs/1.2.0/pixelator/: pixelator.html
docs/1.3.0/: pixelator.html
docs/pixelator/: pixelator.html
pixelator/: __init__.py  pixelator.py
test/: test_1.py  test_2.py  test_3.py
utils/: docs.sh  prettify.sh
